--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 					</div>
 				</div>
 				
-				<div class="col-sm-9 hidden-xs">
+				<div class="col-sm-9">
 					<div class="mainnmenu">
 						<div class="mainnmenu">
 							<nav>
