--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
 				<div class="col-sm-12">
 					<div class="ft_bottom text-center">
 						<p>
-							DBpedia Português 2016. Este website é distribuido livremente sob a licença <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
+							DBpedia Português 2007 - 2017. Este website é distribuido livremente sob a licença <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
 						</p>
 					</div>
 				</div>
