--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,19 @@
 <header>
-	<div class="menu_area ">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="logo hidden-xs hidden-sm">
-						<a href="/">
-							<img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/>
-						</a>
-					</div>
-				</div>
-				
-				<div class="col-sm-9">
-					<div class="mainnmenu">
-						<div class="mainnmenu">
-							<nav>
-								<ul class="menu">
+      <div class="menu_area ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="logo hidden-xs hidden-sm">
+                            <a href="index.html">
+                                <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Spotlight"/>
+                            </a>
+                        </div>
+						<center><a href="index.html" class="logomarca hidden-md hidden-lg"><img src="img/dbpedia_spotlight_logo.png" class="logomarca" alt="logo dbpedia" title="DBpedia Spotlight"/></a></center>
+                    </div>
+                    <div class="col-sm-9 hidden-xs">
+                        <div class="mainnmenu">
+                                <nav>
+                                    <ul class="menu">
 									<li class="active"><a href="/" title="Home">Home</a></li>
 									<li>
 										<a href="/o_que_e" title="O que é">O que é</a>
@@ -35,12 +34,35 @@
 									<li><a href="/exemplos" title="Exemplos">Exemplos</a></li>
 									<li><a href="/downloads" title="Download">Download</a></li>
 									<li><a href="/contato" title="Contato">Contato</a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+									</ul>
+                                </nav>
+                                <nav class="mb_menu hidden">
+                                    <ul class="menu_for_mobile">
+										<li class="active"><a href="/" title="Home">Home</a></li>
+										<li>
+											<a href="/o_que_e" title="O que é">O que é</a>
+											<ul class="sub_menu">
+												<li><a href="/o_que_e/empresas" title="Para Empresas">Para Empresas</a></li>
+												<li><a href="/o_que_e/pesquisadores" title="Para Pesquisadores">Para Pesquisadores</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="/como_participar" title="Como participar">Como participar</a>
+											<ul class="sub_menu">
+												<li><a href="/como_participar/documentacao/" title="Documentação">Documentação</a></li>
+												<li><a href="/como_participar/qualidade" title="Qualidade">Qualidade</a></li>
+												<li><a href="/como_participar/integracao" title="Integração">Integração</a></li>
+											</ul>
+										</li>
+										<li><a href="/sobre" title="Sobre">Sobre</a></li>
+										<li><a href="/exemplos" title="Exemplos">Exemplos</a></li>
+										<li><a href="/downloads" title="Download">Download</a></li>
+										<li><a href="/contato" title="Contato">Contato</a></li>
+                                    </ul>
+                                </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>	
 </header>
