--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
                     <div class="col-sm-3">
                         <div class="logo hidden-xs hidden-sm">
                             <a href="index.html">
-                                <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Spotlight"/>
+                                <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/>
                             </a>
                         </div>
-						<center><a href="index.html" class="logomarca hidden-md hidden-lg"><img src="img/dbpedia_spotlight_logo.png" class="logomarca" alt="logo dbpedia" title="DBpedia Spotlight"/></a></center>
+						<center><a href="index.html" class="logomarca hidden-md hidden-lg"><img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/></a></center>
                     </div>
                     <div class="col-sm-9 hidden-xs">
                         <div class="mainnmenu">
