Modificando layout : cores / logo / ajustando posts página inicial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                         <div class="mainnmenu">
                                 <nav>
                                     <ul class="menu">
-									<li class="active"><a href="/" title="Home">Home</a></li>
+									<li><a href="/" title="Home">Home</a></li>
 									<li>
 										<a href="/o_que_e" title="O que é">O que é</a>
 										<ul class="sub_menu">
