--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ figure {position: relative;}
 .fix_m_r {margin-right: -15px;}
 a {color: #111111;}
 a:focus {outline: 0px solid;text-decoration: none;}
-a:hover,.btn:hover,.btn:focus {text-decoration: none;}
+a:hover,.btn:hover,.btn:focus {text-decoration: none; }
 a,.menu li,.sub_menu,figcaption,.blog_text,figure.blog_item::after,figcaption ul.team_text li,figure.project_photo::before,ul.project_nav > li,.bottom_social li,#footermap,ul.post_social li a,a.th_bt {-webkit-transition: .5s;transition: .5s;}
 ul {list-style: none;padding: 0;margin: 0;}
 textarea {border-style: none;border-color: Transparent;overflow: auto;height:130px !important;}
@@ -34,22 +34,25 @@ textarea {border-style: none;border-color: Transparent;overflow: auto;height:130
 p {line-height: 25px;font-size: 15px;font-weight: 500;}
 .mb80 {margin-bottom: 80px;}
 .mb40 {margin-bottom: 40px;}
+#bannerindex {background: #70b8d9 url(../img/waterlogo.png) no-repeat center; border-bottom: 1px solid #5ba7c9; padding: 40px 0px; text-align:center;}
+#bannerindex .banner-home{max-width: 405px; margin: 0px auto;}
 .section_title {margin-bottom: 0px;}
 .section_title h6 {color: #DABE00;font-family: 'Open Sans', sans-serif;font-size: 13px;font-weight: bold;margin-bottom: 5px;}
-.section_title2 h6 {color: #DABE00;font-family: 'Open Sans', sans-serif;font-size: 13px;font-weight: bold;margin-bottom: 5px;}
+.section_title2 h6 {color: #999999;font-family: 'Open Sans', sans-serif;font-size: 11px;margin-bottom: 5px; font-size: 11px; text-transform: uppercase;}
 .section_title2 h2 {color: #004164;font-size: 16px;font-weight: 700;text-transform: uppercase;}
 .section_title h2 {color: #004164;font-size: 20px;font-weight: 700;text-transform: uppercase;}
 .notice-area{background:#fff;}
-.block-text2 > p{border-left:3px solid #DABE00;color:#8e8e8e;font-weight:300;line-height:25px;width:100%;padding-left:30px;margin-bottom:20px;}
+.block-text2 > p{border-left:1px solid #cccccc;color:#8e8e8e;font-weight:300;line-height:25px;width:100%;padding-left:30px;margin-bottom:20px;}
 .title-home{color:#004164;margin-bottom:50px;margin-top:50px;text-align:center;text-transform:uppercase;}
 .title-home h3{font-size:28px;font-weight:700;}
-.btn-more{background:#F8EB95;color:#000000;padding:5px 16px;}
-.btn-more:hover{background: #004164;color: #fff;}
-.btn-download{background:#F8EB95;color:#000000;padding:10px 30px 10px 30px;line-height:62px;}
+.btn-more, input{background:#f69900; font-family: 'Open Sans', sans-serif; color:#ffffff;padding:5px 16px;font-size: 12px; border:none;}
+.btn-more:hover, input:hover{background: #CA7106;color: #fff; }
+.btn-download{background:#f69900;color:#ffffff;padding:10px 30px 10px 30px;line-height:62px;}
+.btn-download:hover{background: #CA7106;color: #fff;}
 .btn-backhome,.btn-backhome:focus,.btn-backhome:active{background:#004164;color:#fff;padding:8px 12px;}
 .btn-backhome:hover{background:#004164;color:#DABE00;}
 .spaca-footer{padding-top:50px;padding-bottom:60px;}
-.powered{background:#fff;padding:10px 0;}
+.powered{background:#FFF3AE;padding:10px 0;}
 .justify{text-align:justify;}
 .justify a{color: #337ab7;}
 .pagination-intern{text-align:center;margin-bottom:50px;}
@@ -59,7 +62,7 @@ p {line-height: 25px;font-size: 15px;font-weight: 500;}
 .prev::before{content:'';background:url(img/prev.png);margin-left:67px;margin-top:-5px;width:35px;height:30px;position:absolute;}
 .next::before{content:'';background:url(img/next.png);margin-left:-29px;margin-top:-5px;width:35px;height:30px;position:absolute;}
 .comment{margin-top:20px;margin-bottom:30px;}
-.border{background: #DABE00;height: 2px;width: 50px;margin-top: -6px;}
+.border{background: #f69900;height: 2px;width: 50px;margin-top: -6px;}
 header {position: relative;z-index: 2;}
 .header_top {background: #021b27;padding: 12px 0;position: relative;}
 .header_top_area::after,.header_top_area {position: relative;}
@@ -76,13 +79,14 @@ nav {display: inline-block;}
 .menu li.active a,.menu li:hover a {color: #fff;}
 .inner_page .menu li.active > a, 
 .home_2 .menu li.active > a, 
-.home_2 .menu li:hover > a {color: #DABE00;}
-.menu li a {color: #1c1b1b;display: block;font-size: 14px;padding: 28px 18px;font-weight: 700;text-transform: uppercase;font-family: 'Open Sans', sans-serif;}
+.home_2 .menu li:hover > a {color: #F29700;}
+.menu li a {color: #.sub_menu li a ;display: block;font-size: 14px;padding: 28px 18px;font-weight: 700;text-transform: uppercase;font-family: 'Open Sans', sans-serif;}
 .sub_menu {background: #021b27;left: 0;position: absolute;top: 100%;width: 194px;visibility: hidden;opacity: 0;-webkit-transform: scaleY(0);transform: scaleY(0);-webkit-transform-origin: top;transform-origin: top;}
 .home_2 .sub_menu {background: #004164;}
 .inner_page .sub_menu {background: #fff;}
 .sub_menu li {display: block;margin-left: -1px;line-height: 10px;}
 .sub_menu li a {color: #fff !important;font-weight: 500;font-family: 'Poppins', sans-serif;padding: 20px;text-align: left;}
+.sub_menu li a:hover{color:#FEC972!important;}
 .menu li:hover > .sub_menu {top: 100%;opacity: 1;visibility: visible;z-index: 999;-webkit-transform: scaleY(1);transform: scaleY(1);}
 .menu li .sub_menu .sub_menu {left: 100%;top: 0;-webkit-transform: rotateY(90deg);transform: rotateY(90deg);-webkit-transform-origin: left center 0;transform-origin: left center 0;}
 .sub_menu li:hover > .sub_menu {-webkit-transform: rotateY(0deg);transform: rotateY(0deg);}
@@ -98,7 +102,7 @@ nav {display: inline-block;}
 .call-text > p {color: #e9e9e9;font-family: "Open Sans", sans-serif;font-size: 14px;font-weight: 300;line-height: 21px;margin-bottom: 0;width: 90%;}
 .call .cl-effect-2 a span {margin-top: 10px;height: 55px;line-height: 55px;width: 190px;}
 .call .row {position: relative;z-index: 4;}
-footer.footer_area {background: url(img/bg-footer.jpg);position: relative;}
+footer.footer_area {background: #f5f5f5;position: relative;}
 .icon-social{opacity: 1.0;}
 .icon-social:hover{opacity: 0.7;}
 .inner_page footer.footer_area{padding-top: 0px;}
@@ -116,7 +120,7 @@ ul.ft_conta li i {margin-right: 10px;color: #DABE00;font-size: 18px;}
 .footer_bottom {background: #021b27;padding: 15px 0;margin-top: 80px;}
 .ft_bottom p {color: #ededed;font-family: 'Poppins', sans-serif;font-size: 12px;position: relative;z-index: 1;}
 .ft_conta span {display: inline-block;vertical-align: middle;width: calc(100% - 80px);line-height: 18px;}
-.ft_bottom p {color: #b2b2b2;position: relative;z-index: 1;margin-bottom: 0;}
+.ft_bottom p {color: #777;position: relative;z-index: 1;margin-bottom: 0;}
 .text-right a {color: #DABE00;}
 .importent_link li:hover a {color: #DABE00;}
 .home_2 .header_top_area,.home_2 .mainnmenu,.home_2 .header_top_area::after,.home_2 .manu_area,.home_2 .manu_area::after,.home_2 .header_top {background: #fff;}
@@ -132,7 +136,7 @@ ul.ft_conta li i {margin-right: 10px;color: #DABE00;font-size: 18px;}
 .breadcrumb_area ul {position: relative;z-index: 1;}
 .breadcrumb_area ul li {color: #fff;font-family: "Poppins", sans-serif;font-size: 14px;font-weight: 300;display: inline-block;letter-spacing: 2px;margin-right: 10px;}
 .breadcrumb_area ul li a{color: #fff;}
-.breadcrumb_area ul li.active {color: #DABE00;font-size: 14px;font-family: "Poppins", sans-serif;}
+.breadcrumb_area ul li.active {color: #F29700;font-weight: 500 ;font-size: 14px;font-family: "Poppins", sans-serif;}
 .inner_page .header_top,.inner_page .mainnmenu,.inner_page .manu_area::after {background: #fff;}
 .inner_page .header_top::before {background: #f3f3f3;bottom: 0;content: "";height: 1px;position: absolute;right: 7px;width: 57%;}
 .inner_page .mainnmenu {text-align: right;}
