--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                                 <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/>
                             </a>
                         </div>
-						<center><a href="index.html" class="logomarca hidden-md hidden-lg"><img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/></a></center>
+						<center><a href="http://pt.dbpedia.org" class="logomarca hidden-md hidden-lg"><img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/></a></center>
                     </div>
                     <div class="col-sm-9 hidden-xs">
                         <div class="mainnmenu">
