--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,6 +51,12 @@
 						</p>
 					</div>
 				</div>
+                            <a href="http://www.dbpedia.pt/pt/">				
+				    <img src="/img/portuguese.jpg" alt="Ver em português">
+			    </a>
+                            <a href="http://www.dbpedia.pt/en/">				
+				    <img src="/img/english.png"  alt="See in english">
+                            </a>
 			   </div>
 		</div>
 	<div>
