Ajustando idioma para o github pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,10 +51,10 @@
 						</p>
 					</div>
 				</div>
-                            <a href="http://www.dbpedia.pt/pt/">				
+                            <a href="http://www.dbpedia.pt">				
 				    <img src="/img/portuguese.jpg" alt="Ver em português">
 			    </a>
-                            <a href="http://www.dbpedia.pt/en/">				
+                            <a href="/en/">				
 				    <img src="/img/english.png"  alt="See in english">
                             </a>
 			   </div>
