DBpedia Portugues speaks English

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DBpedia Português</title>
+   {% I18n_Headers %}
+    <title>{{ site.titulo[site.active_lang]}}</title>
 <!--	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,600italic,400italic,700italic,300,300italic' rel='stylesheet' type='text/css'>
