--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                     <div class="col-sm-3">
                         <div class="logo hidden-xs hidden-sm">
                             <a href="http://www.dbpedia.pt">
-                                <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/>
+                                <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="{{ site.titulo[site.active_lang]}}"/>
                             </a>
                         </div>
 						<center><a href="http://pt.dbpedia.org" class="logomarca hidden-md hidden-lg"><img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="DBpedia Português"/></a></center>
@@ -16,48 +16,48 @@
                                     <ul class="menu">
 									<li><a href="/" title="Home">Home</a></li>
 									<li>
-										<a href="/o_que_e" title="O que é">O que é</a>
+										<a href="/o_que_e" title="{{ site.o_que_e[site.active_lang]}}">{{ site.o_que_e[site.active_lang]}}</a>
 										<ul class="sub_menu">
-											<li><a href="/o_que_e/empresas" title="Para Empresas">Para Empresas</a></li>
-											<li><a href="/o_que_e/pesquisadores" title="Para Pesquisadores">Para Pesquisadores</a></li>
+											<li><a href="/o_que_e/empresas" title="{{ site.empresas[site.active_lang]}}">{{ site.empresas[site.active_lang]}}</a></li>
+											<li><a href="/o_que_e/pesquisadores" title="{{ site.pesquisadores[site.active_lang]}}">{{ site.pesquisadores[site.active_lang]}}</a></li>
 										</ul>
 									</li>
 									<li>
-										<a href="/como_participar" title="Como participar">Como participar</a>
+										<a href="/como_participar" title="{{ site.participar[site.active_lang]}}">{{ site.participar[site.active_lang]}}</a>
 										<ul class="sub_menu">
-											<li><a href="/como_participar/documentacao/" title="Documentação">Documentação</a></li>
-											<li><a href="/como_participar/qualidade" title="Qualidade">Qualidade</a></li>
-											<li><a href="/como_participar/integracao" title="Integração">Integração</a></li>
+											<li><a href="/como_participar/documentacao/" title="{{ site.documentacao[site.active_lang]}}">{{ site.documentacao[site.active_lang]}}</a></li>
+											<li><a href="/como_participar/qualidade" title="{{ site.qualidade[site.active_lang]}}">{{ site.qualidade[site.active_lang]}}</a></li>
+											<li><a href="/como_participar/integracao" title="{{ site.integracao[site.active_lang]}}">{{ site.integracao[site.active_lang]}}</a></li>
 										</ul>
 									</li>
-									<li><a href="/sobre" title="Sobre">Sobre</a></li>
-									<li><a href="/exemplos" title="Exemplos">Exemplos</a></li>
-									<li><a href="/downloads" title="Download">Download</a></li>
-									<li><a href="/contato" title="Contato">Contato</a></li>
+									<li><a href="/sobre" title="{{ site.sobre[site.active_lang]}}">{{ site.sobre[site.active_lang]}}</a></li>
+									<li><a href="/exemplos" title="{{ site.exemplos[site.active_lang]}}">{{ site.exemplos[site.active_lang]}}</a></li>
+									<li><a href="/downloads" title="{{ site.download[site.active_lang]}}">{{ site.download[site.active_lang]}}</a></li>
+									<li><a href="/contato" title="{{ site.contato[site.active_lang]}}">{{ site.contato[site.active_lang]}}</a></li>
 									</ul>
                                 </nav>
                                 <nav class="mb_menu hidden">
                                     <ul class="menu_for_mobile">
 										<li class="active"><a href="/" title="Home">Home</a></li>
 										<li>
-											<a href="/o_que_e" title="O que é">O que é</a>
+											<a href="/o_que_e" title="{{ site.o_que_e[site.active_lang]}}">{{ site.o_que_e[site.active_lang]}}</a>
 											<ul class="sub_menu">
-												<li><a href="/o_que_e/empresas" title="Para Empresas">Para Empresas</a></li>
-												<li><a href="/o_que_e/pesquisadores" title="Para Pesquisadores">Para Pesquisadores</a></li>
+												<li><a href="/o_que_e/empresas" title="{{ site.empresas[site.active_lang]}}">{{ site.empresas[site.active_lang]}}</a></li>
+												<li><a href="/o_que_e/pesquisadores" title="{{ site.pesquisadores[site.active_lang]}}">{{ site.pesquisadores[site.active_lang]}}</a></li>
 											</ul>
 										</li>
 										<li>
-											<a href="/como_participar" title="Como participar">Como participar</a>
+											<a href="/como_participar" title="{{ site.participar[site.active_lang]}}">{{ site.participar[site.active_lang]}}</a>
 											<ul class="sub_menu">
-												<li><a href="/como_participar/documentacao/" title="Documentação">Documentação</a></li>
-												<li><a href="/como_participar/qualidade" title="Qualidade">Qualidade</a></li>
-												<li><a href="/como_participar/integracao" title="Integração">Integração</a></li>
+												<li><a href="/como_participar/documentacao/" title="{{ site.documentacao[site.active_lang]}}">{{ site.documentacao[site.active_lang]}}</a></li>
+												<li><a href="/como_participar/qualidade" title="{{ site.qualidade[site.active_lang]}}">{{ site.qualidade[site.active_lang]}}</a></li>
+												<li><a href="/como_participar/integracao" title="{{ site.integracao[site.active_lang]}}">{{ site.integracao[site.active_lang]}}</a></li>
 											</ul>
 										</li>
-										<li><a href="/sobre" title="Sobre">Sobre</a></li>
-										<li><a href="/exemplos" title="Exemplos">Exemplos</a></li>
-										<li><a href="/downloads" title="Download">Download</a></li>
-										<li><a href="/contato" title="Contato">Contato</a></li>
+										<li><a href="/sobre" title="{{ site.sobre[site.active_lang]}}">{{ site.sobre[site.active_lang]}}</a></li>
+										<li><a href="/exemplos" title="{{ site.exemplos[site.active_lang]}}">{{ site.exemplos[site.active_lang]}}</a></li>
+										<li><a href="/downloads" title="{{ site.download[site.active_lang]}}">{{ site.download[site.active_lang]}}</a></li>
+										<li><a href="/contato" title="{{ site.contato[site.active_lang]}}">{{ site.contato[site.active_lang]}}</a></li>
                                     </ul>
                                 </nav>
                         </div>
