--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="footer_widget">
-					<h4>DBpedia PORTUGUÊS</h4>
-					<p>DBpedia Português é um projeto de internacionalização da DBpedia para a comunidade Lusofona. Todo o software da DBpedia é Open Source e pode ser diretamente reutilizado nos projetos da sua empresa. O mesmo vale para os dados gerados.</p>
+					<h4>{{site.titulo[site.active_lang]}}</h4>
+					<p>{{site.descricao[site.active_lang]}}</p>
 					<ul class="bottom_social">
 					 <li><a href="https://github.com/dbpedia-pt" target="_blank"><img src="/img/icon-github.png" class="icon-social" /></a></li>
 					 <li><a href="https://twitter.com/dbpedia_pt" target="_blank"><img src="/img/icon-twitter.png" class="icon-social" /></i></a></li>
@@ -13,7 +13,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="footer_widget">
-					<h4>FUNDADORES</h4>
+					<h4>{{site.fundadores[site.active_lang]}}</h4>
 					<ul class="importent_link">
 						<li><a href="http://www.uni-leipzig.de"><img src="/img/universitat-leipzig.png" /></a></li>
 						<li><a href="http://www.fu-berlin.de"><img src="/img/freie.png" /></a></li>
@@ -22,7 +22,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="footer_widget">
-					<h4>COLABORADORES ATIVOS</h4>
+					<h4>{{site.colaboradores[site.active_lang]}}</h4>
 					<ul class="importent_link" style="display:inline-flex;">
 						<li><a href="http://www.ufc.br" target="_blank"><img src="/img/ufce.png" /></a></li>
 						<li><a href="http://www.ufjf.br" target="_blank"><img src="/img/ufjf.png" /></a></li>
@@ -32,7 +32,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="footer_widget">
-					<h4>HOSPEDAGEM</h4>
+					<h4>{{site.hospedagem[site.active_lang]}}</h4>
 					<ul class="importent_link" style="display:inline-flex;">
 						<li><a href="http://www.rnp.br" target="_blank"><img src="/img/rnp.png" /></a></li>
 					</ul>  
@@ -47,7 +47,7 @@
 				<div class="col-sm-12">
 					<div class="ft_bottom text-center">
 						<p>
-							DBpedia Português 2007 - 2017. Este website é distribuido livremente sob a licença <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
+							{{site.licenca[site.active_lang]}} <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
 						</p>
 					</div>
 				</div>
