--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ site.titulo[site.active_lang]}}</title>
+	{% I18n_Headers http://www.dbpedia.pt %}
 <!--	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,600italic,400italic,700italic,300,300italic' rel='stylesheet' type='text/css'>
