--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,6 @@
 <head>
     <meta charset="utf-8">
-
-    <meta http-equiv="Content-Language" content="pt"><link rel="alternate" i18n="pt" href="site.url/" />
-    <link rel="alternate" i18n="en" href="site.url/en/" />	
+    {% I18n_Headers site.url %}	
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ site.titulo[site.active_lang]}}</title>
 <!--	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
