--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="logo hidden-xs hidden-sm">
-                            <a href="http://www.dbpedia.pt">
+                            <a href="http://pt.dbpedia.org">
                                 <img src="/img/logo-dbpedia.png" class="logomarca" alt="logo dbpedia" title="{{ site.titulo[site.active_lang]}}"/>
                             </a>
                         </div>
