--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,7 @@
 						</p>
 					</div>
 				</div>
-                            <a href="http://www.dbpedia.pt">				
+                            <a href="http://pt.dbpedia.org">				
 				    <img src="/img/portuguese.jpg" alt="Ver em português">
 			    </a>
                             <a href="/en/">				
