--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
 			<div class="col-sm-4">
 				<div class="footer_widget">
 					<h4>{{site.hospedagem[site.active_lang]}}</h4>
-					<ul class="importent_link" style="display:inline-flex;">
+					<ul class="important_link" style="display:inline-flex;">
 						<li><a href="http://www.rnp.br" target="_blank"><img src="/img/rnp.png" /></a></li>
 					</ul>  
 				</div>
@@ -60,4 +60,10 @@
 			   </div>
 		</div>
 	<div>
+
+    <script src="/js/vendor/jquery-1.12.0.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.meanmenu.min.js"></script>
+    <script src="/js/jquery.easing.1.3.min.js"></script>
+	<script src="/js/main.js"></script>
 </footer>
