--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                         <div class="mainnmenu">
                                 <nav>
                                     <ul class="menu">
-									<li><a href="/" title="Home">Home</a></li>
+									<li  class="active"><a href="/" title="Home">Home</a></li>
 									<li>
 										<a href="/o_que_e" title="{{ site.o_que_e[site.active_lang]}}">{{ site.o_que_e[site.active_lang]}}</a>
 										<ul class="sub_menu">
