--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,17 @@
+<!--[if IE]><![endif]-->
+<!--[if lt IE 7 ]> <html lang="pt-br" class="ie6">    <![endif]-->
+<!--[if IE 7 ]>    <html lang="pt-br" class="ie7">    <![endif]-->
+<!--[if IE 8 ]>    <html lang="pt-br" class="ie8">    <![endif]-->
+<!--[if IE 9 ]>    <html lang="pt-br" class="ie9">    <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
 <head>
     <meta charset="utf-8">
     {% I18n_Headers site.url %}	
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ site.titulo[site.active_lang]}}</title>
-<!--	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,600italic,400italic,700italic,300,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -16,7 +24,7 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-          <script src="js/html5shiv.min.js"></script>
-          <script src="js/respond.min.js"></script>
+          <script src="/js/html5shiv.min.js"></script>
+          <script src="/js/respond.min.js"></script>
 	<![endif]-->
 </head>
