--- a/_includes/contato.html
+++ b/_includes/contato.html
@@ -14,6 +14,10 @@
 			  <div class="panel-body">
 					<p>A/C: Pablo N. Mendes</p>
 					<p><span class="glyphicon glyphicon-envelope"></span> pablomendes (at) gmail.com</p>
+				 	<p>A/C: Diego Moussallem</p>
+					<p><span class="glyphicon glyphicon-envelope"></span> diegomoussallem (at) gmail.com</p>
+				  	<p>A/C: Sandro Coelho</p>
+					<p><span class="glyphicon glyphicon-envelope"></span> sandroacoelho (at) gmail.com</p>
   		   </div>
         </div>
     </div>
