--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer_area">
 	<div class="container spaca-footer">
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<div class="footer_widget">
 					<h4>{{site.titulo[site.active_lang]}}</h4>
 					<p>{{site.descricao[site.active_lang]}}</p>
@@ -11,7 +11,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<div class="footer_widget">
 					<h4>{{site.fundadores[site.active_lang]}}</h4>
 					<ul class="importent_link">
@@ -20,25 +20,28 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<div class="footer_widget">
 					<h4>{{site.colaboradores[site.active_lang]}}</h4>
 					<ul class="importent_link" style="display:inline-flex;">
 						<li><a href="http://www.ufc.br" target="_blank"><img src="/img/ufce.png" /></a></li>
 						<li><a href="http://www.ufjf.br" target="_blank"><img src="/img/ufjf.png" /></a></li>
 						<li><a href="http://www.ufrj.br" target="_blank"><img src="/img/ufrj.png" /></a></li>
-					</ul>  
+					</ul>
+					<ul>
+						<li><a href="https://br.okfn.org/" target="_blank"><img src="/img/okbr.png" /></a></li>
+					</ul>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<div class="footer_widget">
 					<h4>{{site.hospedagem[site.active_lang]}}</h4>
 					<ul class="important_link" style="display:inline-flex;">
 						<li><a href="http://www.rnp.br" target="_blank"><img src="/img/rnp.png" /></a></li>
-					</ul>  
+					</ul>
 				</div>
 			</div>
-			
+
 		</div>
 	</div>
 	<div class="powered">
@@ -51,10 +54,10 @@
 						</p>
 					</div>
 				</div>
-                            <a href="http://pt.dbpedia.org">				
+                            <a href="http://pt.dbpedia.org">
 				    <img src="/img/portuguese.jpg" alt="Ver em português">
 			    </a>
-                            <a href="/en/">				
+                            <a href="/en/">
 				    <img src="/img/english.png"  alt="See in english">
                             </a>
 			   </div>
